# mercury

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  config.json  visualize.py
include/: backtest.h  cfg.h  clue.h  config.h  csv.h  data_handler.h  event.h  events.h  market.h  mean_reversion.h  strategy.h  types.h  util.h
src/: backtest.cc  config.cc  data_handler.cc  events.cc  main.cc  market.cc  util.cc
src/strategies/: mean_reversion.cc
tests/: events_test.cc  util_test.cc
